# qcparse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING2.md  LICENSE  README.md  fake.py  pyproject.toml
.github/: publish-to-pypi.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: basic-code-quality.yaml  basic_code_quality.yaml  create-release.yaml  publish-to-pypi.yaml  test.yaml
docs/: design-decisions.md  dev-decisions.md
qcparse/: __init__.py  cli.py  codec.py  exceptions.py  helpers.py  main.py  models.py  registry.py  terachem.py  utils.py
qcparse/encoders/: crest.py  terachem.py
qcparse/parsers/: __init__.py  crest.py  decorators.py  registry.py  terachem.py  utils.py
scripts/: format.sh  release.py  tests.sh
src/qccodec/: __init__.py  cli.py  codec.py  exceptions.py  models.py  registry.py
src/qccodec/encoders/: crest.py  terachem.py
src/qccodec/parsers/: crest.py  terachem.py  utils.py
tcparse/: exceptions.py  helpers.py  main.py  parsers.py
tests/: conftest.py  test_cli.py  test_codec.py  test_crest.py  test_crest_encoders.py  test_crest_parsers.py  test_main.py  test_main_terachem.py  test_models.py  test_parse.py  test_parser_registry.py  test_parsers.py  test_registry.py  test_terachem.py  test_terachem_encoders.py  test_terachem_parsers.py  test_utils.py
tests/data/: caffeine.gradient.out  caffeine.xyz  crest_stdout.txt  energy.out  failure.nocuda.out  gradient.out  gradients.py  hessians.py  hg.out  water.molecule_moved.out  water.xyz
tests/data/crest/: crest.engrad  crest_conformers.xyz  g98HF.out  g98big.out  hessian_stdout.txt  numhess1  optstdout.txt
tests/data/crest/answers/: conformers.py  crest_g98big_normal_modes.npy  frequencies.py  gradients.py  hessians.py  normal_modes.py  optimizations.py
tests/data/crest_output/: crest_rotamers.xyz  g98.out  numhess1
tests/data/terachem/: caffeine.frequencies.out  caffeine.tddft.out  failure.basis.out  optim.xyz  water.energy.out  water.frequencies.out  water.opt.out  water.tddft.out
tests/data/terachem/answers/: excited_states.py  gradients.py  trajectories.py  trajectory.json
