[tool.poetry]
name = "qcparse"
version = "0.7.0"
description = "A package for parsing Quantum Chemistry program file outputs into structured qcio data objects."
authors = ["Colton Hicks <github@coltonhicks.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coltonbh/qcparse"
homepage = "https://github.com/coltonbh/qcparse"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.0.0"
qcio = "^0.11.8"
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"
pre-commit = "^3.2.0"
pytest-cov = "^4.0.0"
ruff = "^0.8.3"
types-toml = "^0.10.8.20240310"

[tool.poetry.scripts]
qcparse = "qcparse.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
isort = { known-first-party = ["qcparse", "tests"] }
select = ["I", "F401"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.typos]
# Exclude specific files or directories
files.extend-exclude = [
    "tests/data/**", # Single file
]
